将相对路径 转换为 绝对路径

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button class="getIfm">获取iframe</button>
+  <!-- <button class="getIfm">获取iframe</button> -->
   <script src="./popup.js" type="module"></script>
   <div class="color"></div>
 </body>
