获取 "所有方法所被引用的dom" 的名字

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,8 @@
   <!-- <button class="getIfm">获取iframe</button> -->
   <script src="./popup.js" type="module"></script>
   <div class="color"></div>
+  <button class="btn-flat">新增</button>
+
 </body>
 
 </html>
